<resources>
    <string name="app_name">BlockID</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">홈</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="menu_attendance">출석 관리</string>
    <string name="menu_notice">공지사항</string>
    <string name="menu_mypage_edit">개인정보수정</string>
    <string name="menu_attendance_check">출석체크</string>
    <string name="menu_attendance_list">출석조회</string>
    <string name="menu_notice_notice">공지사항</string>
    <string name="menu_notice_developer">개발자소개</string>

    <string name="notice_developer">개발자소개</string>
    <string name="notice_notice">공지사항</string>
    <string name="notice_inquiry">출석조회</string>
    <string name="mypage_edit">개인정보 수정</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="password_edit">비밀번호 변경</string>
    <string name="withdraw_check">서비스 탈퇴 확인</string>
    <string name="withdraw_service">서비스 탈퇴</string>
    <string name="join_service">서비스 가입</string>
    <string name="login">로그인</string>

<<<<<<< HEAD
 <!--   <string name="apiaddress">http://172.20.10.3:6464</string>-->
    <string name="apiaddress">http://192.168.0.8:6464</string>

=======
    <string name="apiaddress">http://172.20.10.3:6464</string>
>>>>>>> 3258bd32e61eefee0efe34a10ac6a4c3e0bf777f
    <string name="apiaddress2">172.20.10.3</string>

    <string name="email_send">/users/email/send</string>
    <string name="signup">/users/signup</string>
    <string name="idcard">/idcard/</string>
    <string name="reIssue">/idcard/activate/</string>
    <string name="qr">/attendance</string>
    <string name="attendance_list">/attendance/list</string>
    <string name="attendance_list2">attendance/list</string>

</resources>
